@@ -4,6 +4,8 @@ Changelog
 Version 1.10 - unreleased
 -------------------------
 
+* Update the hosting template to make running of buildout optional.
+  [wichert]
 
 * Update the hosting template to test if a port is already in use and
   abort if so.
